Introduce DetailedTableRowData record and ReportFormattingConstants utility class for enhanced table formatting